--- a/src/styles/customers/customers-card/customers-card-table/customers-card-table.scss
+++ b/src/styles/customers/customers-card/customers-card-table/customers-card-table.scss
@@ -1,4 +1,6 @@
 .customers__card-table {
+  border-spacing: 20px;
+  border-collapse: separate;
   box-sizing: border-box;
   margin-top: 36px;
   @include semi-bold-text-14;
@@ -10,8 +12,17 @@
   }
 
   .customers__card-table-row {
+    position: relative;
     padding: 20px 0;
-    border-bottom: 1px solid #eeeeee;
+  }
+
+  .customers__card-table-row::before {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: #eeeeee;
+    position: absolute;
+    bottom: -10px;
   }
 
   .customers__card-table-cell--body {
