--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -11,6 +11,7 @@ html, body {
 }
 
 body {
+  background-color: #eee;
   font-family: sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
